--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>HBT</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <script src="https://use.fontawesome.com/381265578e.js"></script>
 </head>
 
@@ -15,9 +15,10 @@
             <div class="name"><span class="hotel"><i class="fa fa-bed" aria-hidden="true"></i></span>
                 HBT</div>
             <div class="links">
-                <div class="home"><a href="#" title="Home"></a>Home</div>
-                <div class="about"><a href="#" title="About"></a>About</div>
-                <div class="contact"><a href="#" title="Contact"></a>Contact</div>
+                <a href="#" title="Home" class="home">Home</a>
+                <!-- <div class="home"><a href="#" title="Home"></a>Home</div> -->
+                <a href="https://about-hbt.surge.sh" title="About" class="about">About</a>
+                <a href="#" title="Contact" class="contact">Contact</a>
             </div>
         </div>
     </div>
@@ -29,7 +30,7 @@
             <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minus praesentium, distinctio
                 harum odit.
             </p>
-            <div class="button">About Out Hotel</div>
+            <a href="#" class="button">About Our Hotel</a>
         </div>
     </div>
 
@@ -71,7 +72,7 @@
             <div class="foot-3">
                 <p class="grid-3"><i class="fa fa-wifi fa-5x" aria-hidden="true"></i></p>
                 <h1 class="red-3">High Speed Wifi</h1>
-                <p class="p3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci error sequi tempore
+                <p class="p3">Lorem ipsum dolor sit adipisicing elit. Adipisci error sequi tempore
                     velit iusto
                     nisi!</p>
             </div>
