--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <div class="name"><span class="hotel"><i class="fa fa-bed" aria-hidden="true"></i></span>
                 HBT</div>
             <div class="links">
-                <a href="#" title="Home" class="home">Home</a>
+                <a href="https://rohit1101.github.io/HBT/" title="Home" class="home">Home</a>
                 <!-- <div class="home"><a href="#" title="Home"></a>Home</div> -->
-                <a href="https://about-hbt.surge.sh" title="About" class="about">About</a>
-                <a href="#" title="Contact" class="contact">Contact</a>
+                <a href="https://rohit1101.github.io/About/" title="About" class="about">About</a>
+                <a href="https://rohit1101.github.io/Contact/" title="Contact" class="contact">Contact</a>
             </div>
         </div>
     </div>
