--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <!-- Navigation Bar -->
     <div class="nav-container">
         <div class="nav">
-            <div class="name"><span class="hotel"><i class="fa fa-bed" aria-hidden="true"></i></span>
-                HBT</div>
+            <a href="https://rohit1101.github.io/HBT/" class="name"><span class="hotel"><i class="fa fa-bed"
+                        aria-hidden="true"></i></span>
+                HBT</a>
             <div class="links">
                 <a href="https://rohit1101.github.io/HBT/" title="Home" class="home">Home</a>
                 <!-- <div class="home"><a href="#" title="Home"></a>Home</div> -->
